# gibberish

./: .gitignore  Cargo.toml  README.md  Untitled  build.sh  lex.txt  out.c  pre.qbe  rules.md  simple.gib  test-parser.qbe  test.c  test.gib  test.json  test.qbe  test.sh  test.txt
.github/workflows/: release.yml  rust.yml
crates/gibberish/: Cargo.toml  pre.c  pre.qbe
crates/gibberish/src/: lib.rs  main.rs
crates/gibberish/src/api/: break_.rs  choice.rs  custom.rs  delim.rs  fold.rs  fold_once.rs  just.rs  maybe.rs  mod.rs  named.rs  none_of.rs  optional.rs  ptr.rs  rec.rs  recover.rs  repeated.rs  sep.rs  seq.rs  skip.rs  unskip.rs
crates/gibberish/src/ast/: builder.rs  mod.rs
crates/gibberish/src/ast/expr/: arg.rs  call.rs  choice.rs  ident.rs  mod.rs  seq.rs
crates/gibberish/src/ast/stmt/: fold.rs  highlight.rs  keyword.rs  mod.rs  parser.rs  token.rs
crates/gibberish/src/cli/: build.rs  command.rs  generate.rs  lex.rs  mod.rs  parse.rs  query.rs  watch.rs
crates/gibberish/src/dsl/: build.rs  highlight.rs  mod.rs  parser.rs  regex.rs
crates/gibberish/src/dsl/ast/: builder.rs  mod.rs
crates/gibberish/src/dsl/ast/expr/: call.rs  choice.rs  ident.rs  mod.rs  seq.rs
crates/gibberish/src/dsl/ast/stmt/: fold.rs  highlight.rs  keyword.rs  mod.rs  parser.rs  token.rs
crates/gibberish/src/dsl/lexer/: build.rs  choice.rs  comp_lang.rs  exact.rs  group.rs  mod.rs  option.rs  seq.rs
crates/gibberish/src/dsl/lst/: token.rs
crates/gibberish/src/dsl/lst/stmt/: mod.rs
crates/gibberish/src/json/: lexer.rs  mod.rs
crates/gibberish/src/lexer/: build.rs  choice.rs  exact.rs  group.rs  mod.rs  option.rs  seq.rs
crates/gibberish/src/lsp/: capabilities.rs  change.rs  completions.rs  definition.rs  diags.rs  document_symbols.rs  fmt.rs  funcs.rs  highlight.rs  hover.rs  mod.rs  references.rs  semantic_token.rs  semantic_tokens.rs
crates/gibberish/src/parser/: break_.rs  build.rs  checkpoint.rs  choice.rs  delim.rs  err.rs  fold_once.rs  just.rs  label.rs  mod.rs  named.rs  optional.rs  ptr.rs  rename.rs  repeated.rs  res.rs  sep.rs  seq.rs  skip.rs  state.rs  unmatched.rs  unskip.rs
crates/gibberish/src/query/: mod.rs
crates/gibberish/src/report/: err.rs  mod.rs  simple.rs
crates/gibberish_bindings/: Cargo.toml  build.rs  build.sh  example.gibsql  slice.qbe  slice.s
crates/gibberish_bindings/src/: expected.rs  lex.rs  lib.rs  main.rs  node.rs  state.rs  vec.rs
crates/gibberish_core/: Cargo.toml  README.md
crates/gibberish_core/src/: err.rs  expected.rs  lang.rs  lib.rs  node.rs  query.rs  state.rs  vec.rs
crates/gibberish_dyn_lib/: Cargo.toml
crates/gibberish_dyn_lib/src/: main.rs
crates/gibberish_lsp/: Cargo.toml
crates/gibberish_lsp/examples/: test.qbe
crates/gibberish_lsp/src/: completion.rs  main.rs  semantic_analyze.rs
crates/gibberish_lsp/src/ast/: mod.rs
crates/gibberish_lsp/src/ast/expr/: call.rs  choice.rs  mod.rs  seq.rs
crates/gibberish_lsp/src/ast/stmt/: fold.rs  keyword.rs  mod.rs  parser.rs  token.rs
crates/gibberish_parser/: Cargo.toml  README.md  build.rs  gibberish.gib
crates/gibberish_parser/lib/: parser.c  parser.qbe
crates/gibberish_parser/src/: lib.rs
crates/gibberish_tree/: Cargo.toml
crates/gibberish_tree/src/: err.rs  expected.rs  lang.rs  lib.rs  node.rs
docs/: api.md  architecture.md  error-recovery.md  language.md  state.md
docs/examples/: gibberish.gib  json.gib  params_test.gib  qbe.gib  sql.gib  test.json  test.qbe  test.sql
docs/svg/: example.svgjjkkjjjjjjjjjjjjjjjk
examples/: json.gib  json.gibtest  new_qbe.gib  params_test.gib  params_test.gibtest  qbe.gib  qbe.gibtest  self.gib  self.gibtest  self.self  simple.gib  simple.gibtest  sql.gib  sql.gibtest  test.gibsql  test_lex.gib
src/: lib.rs  main.rs
src/api/: break_.rs  choice.rs  delim.rs  fold.rs  fold_once.rs  just.rs  maybe.rs  mod.rs  named.rs  none_of.rs  optional.rs  ptr.rs  rec.rs  recover.rs  sep.rs  seq.rs  skip.rs  tok_seq.rs  unskip.rs
src/cli/: build.rs  check.rs  command.rs  lex.rs  lsp.rs  mod.rs  parse.rs  query.rs  watch.rs
src/dsl/: ast.rs  choice.rs  delim.rs  fold.rs  highlight.rs  just.rs  lang.rs  lexer.rs  mod.rs  named.rs  no_skip.rs  parser.rs  rec.rs  regex.rs  sep.rs  seq.rs  skip.rs  syntax.rs  validate.rs
src/giblang/: lang.rs  lexer.rs  mod.rs  syntax.rs
src/json/: lang.rs  lexer.rs  parser.rs  syntax.rs
src/lexer/: token.rs
src/lsp/: capabilities.rs  diags.rs  document_symbols.rs  mod.rs  semantic_tokens.rs
src/parser/: err.rs  lang.rs  mod.rs  node.rs  res.rs  state.rs
src/report/: mod.rs
(+35 files in other folders)
