[package]
name = "gibberish"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
logos = { version = "0.15.0" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
notify = "8.0.0"
ansi_term = "0.12.1"
ariadne = "0.5.1"
regex-lexer = "0.2.0"
