[package]
name = "gibberish"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
logos = { version = "0.15.0" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
notify = "8.0.0"
ansi_term = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.3"
serde_json = "1.0.143"
async-lsp = { version = "0.2.0", features = [
  "client-monitor",
  "omni-trait",
  "stdio",
  "tracing",
  "tokio",
] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tower = "0.5.1"
futures = "0.3.31"
dashmap = "6"
ariadne = "0.5.1"
thiserror = "2.0.17"
tempfile = "3.23.0"
gibberish-gibberish-parser = { path = "../../../gibberish_parser" }
gibberish_tree = { path = "../gibberish_tree" }
gibberish_dyn_lib = { path = "../gibberish_dyn_lib" }
