[package]
name = "gibberish"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
ariadne = "0.6.0"
tempfile = "3.23.0"
gibberish-gibberish-parser = { path = "../gibberish_parser/" }
gibberish-core = { path = "../gibberish_core/" }
gibberish_dyn_lib = { path = "../gibberish_dyn_lib" }
serial_test = "3.2.0"


env_logger = "0.11.5"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4.14"
anyhow = "1.0.93"
thiserror = "2.0.3"

notify = "8.0.0"
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
