[package]
name = "gibberish-lsp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4.14"
im-rc = "15.0.0"
oxc_index = "0.36.0"
anyhow = "1.0.93"
thiserror = "2.0.3"
rust-lapper = "1.1.0"

notify = "8.0.0"
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

gibberish-gibberish-parser = { path = "../gibberish_parser" }
gibberish-core = { path = "../gibberish_core" }
