[package]
name = "gibberish-gibberish-parser"
version = "0.2.0"
edition = "2021"
description = "A parser for the gibberish language"
license = "MIT"
repository = "https://github.com/mnbjhu/gibberish/crates/gibberish_parser"
readme = "README.md"

# Adjust as needed for your workspace/publishing
[lib]
path = "src/lib.rs"

[dependencies]
gibberish-core = { path = "../gibberish_core/" }

[build-dependencies]
cc = "1.2"
